<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_instance" app:iconSpaceReserved="false">
        <EditTextPreference
            app:key="instance_url"
            app:title="@string/pref_instance_title"
            app:dialogMessage="@string/pref_instance_dialog"
            app:iconSpaceReserved="false" />
        <Preference
            app:key="pick_public_instance"
            app:title="@string/pref_pick_public_title"
            app:summary="@string/pref_pick_public_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_browsing" app:iconSpaceReserved="false">
        <ListPreference
            app:key="link_mode"
            app:title="@string/pref_link_mode_title"
            app:defaultValue="custom_tab"
            app:entries="@array/link_mode_entries"
            app:entryValues="@array/link_mode_values"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_access" app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:key="hide_webview_ua"
            app:title="@string/pref_hide_ua_title"
            app:summary="@string/pref_hide_ua_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false" />
        <Preference
            app:key="clear_data"
            app:title="@string/pref_clear_data_title"
            app:summary="@string/pref_clear_data_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
