<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home" android:title="@string/action_home" app:showAsAction="never" />
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh" app:showAsAction="never" />
    <item android:id="@+id/action_share" android:title="@string/action_share" app:showAsAction="never" />
    <item android:id="@+id/action_open_browser" android:title="@string/action_open_browser" app:showAsAction="never" />
    <item android:id="@+id/action_logout" android:title="@string/action_logout" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/settings_title" app:showAsAction="never" />
</menu>
